@@ -1,0 +1,8 @@
+package net.silentchaos512.scalinghealth.lib;
+
+public enum EnumModParticles {
+
+  HEART_CONTAINER,
+  ENCHANTED_HEART,
+  CURSED_HEART
+}
